tests/ui/unexpected_lit.stderr
error: unexpected literal type `string`
 --> $DIR/unexpected_lit.rs:4:20
  |
4 | #[shorthand(enable("string"))]
  |                    ^^^^^^^^
